# curio-parachain-node

./: .gitignore  Cargo.toml  INSTALL.md  README.md
.github/workflows/: rust.yml
docker/: Dockerfile  docker-compose.yml
js/: .env  index.js  package.json
node/cli/: Cargo.toml
node/cli/src/: browser.rs  chain_spec.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/executor/tests/: basic.rs  fees.rs  submit_transaction.rs
node/inspect/src/: lib.rs
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/runtime/: Cargo.toml
node/runtime/src/: constants.rs  impls.rs  lib.rs
pallets/dummy/: Cargo.toml
pallets/dummy/src/: default_weights.rs  lib.rs  mock.rs  tests.rs
scripts/: init.sh  keyring.sh
testing/client/: Cargo.toml
testing/client/src/: client_ext.rs  lib.rs
testing/node/: Cargo.toml
testing/node/src/: bench.rs  genesis.rs
testing/runtime/: Cargo.toml
testing/runtime/client/: Cargo.toml
testing/runtime/client/src/: trait_tests.rs
testing/runtime/src/: genesismap.rs  lib.rs  system.rs
testing/runtime/transaction-pool/: Cargo.toml
testing/service/: Cargo.toml
testing/service/src/: lib.rs
testing/service/src/client/: light.rs  mod.rs
